complete the movie recommendation